Homepage page_id query var not set and can cause problems with Yoast SEO - FIXED
All CPT text are translatable using db translation - FIXED
New actions added to customize listing not found message - CHANGED
Advance search submit button fixed - FIXED
Pagination not working when location selected - FIXED
Shortcode added for CPT categories widget - ADDED

v1.5.4
Event after map marker opened extended to prevent FireFox reclosing marker with server side clustering addon - FIXED
Map popup image margins and padding set to 0 !important for compatibility - CHANGED
Bootstrap styles can alter the popular categories count number position - FIXED
Location switcher ajax search not working with accents chars - FIXED
Best of widget Option added to display reviews in excerpt - ADDED
Image gallery lightbox popup image stretches problem with some themes - FIXED
Changed creation of url custom field from varchar 255 to text for longer urls - CHANGED
Yoast SEO is unable to overwrite the home page meta title - FIXED
Map tick box HTML changed for compatibility - CHANGED
New widget added: CPT Categories - ADDED
Default home page map width changed to 100% from 960px - CHANGED
With multi ratings the comment sorting is reversed then selected under settings -> discussion - FIXED
Excerpt more filter now only applied to GD post types - CHANGED
New action "geodir_infowindow_meta_before" added in map marker info window - ADDED
Default category can be set by "default_category" in csv import - CHANGED
Search unable to find listings for a particular keyword in the content - FIXED
New GD Home page created and setting depreciated for overriding normal home page - CHANGED
Email address with .coop TLD not validated - FIXED
Yoast meta title, description & keywords now also works with %location% tag - ADDED
GeoProperty theme compatibility pack - ADDED
Related listing widget does not reset the $post value properly - FIXED