@@ -3328,3 +3328,4 @@ function geodir_filter_listing_page_title($list_title)
 }
 
 add_action('geodir_message_not_found_on_listing', 'geodir_display_message_not_found_on_listing');
+add_filter('geodir_breadcrumb', 'geodir_strip_breadcrumb_li_wrappers', 999, 2);
