@@ -10,6 +10,7 @@ New actions added to customize listing not found message - CHANGED
 Advance search submit button fixed - FIXED
 Pagination not working when location selected - FIXED
 Shortcode added for CPT categories widget - ADDED
+Breadcrumb HTML does not wrap correctly for a small screens or in a mobile - FIXED
 
 v1.5.4
 Event after map marker opened extended to prevent FireFox reclosing marker with server side clustering addon - FIXED
